--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.servlet.context-path=/v1
 ####################################################################################
 
 ######################### TWILIO CONFIG ##################################################
-via-broker-service.accountSid=AC2fe9c269e2fd615eed8641dbdaa27f5d
-via-broker-service.authToken=8f1a0bcd150e72cc63def7b49a18c341
-via-broker-service.serviceSid=VA7fe99f9ee8ce14bcd0adc6491d220cea
-via-broker-service.twilioNumber=+17088326171
+authService.twilio.accountSid=AC2fe9c269e2fd615eed8641dbdaa27f5d
+authService.twilio.authToken=8f1a0bcd150e72cc63def7b49a18c341
+authService.twilio.serviceSid=VA7fe99f9ee8ce14bcd0adc6491d220cea
+authService.twilio.twilioNumber=+17088326171
 ##########################################################################################
