hsaY: Auth Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,15 @@ server.servlet.context-path=/v1
 ####################################################################################
 
 ######################### TWILIO CONFIG ##################################################
-authService.twilio.accountSid=AC2fe9c269e2fd615eed8641dbdaa27f5d
-authService.twilio.authToken=8f1a0bcd150e72cc63def7b49a18c341
-authService.twilio.serviceSid=VA7fe99f9ee8ce14bcd0adc6491d220cea
-authService.twilio.twilioNumber=+17088326171
+as.twilio.accountSid=AC0e67255091007e03c8c076fb20c2b013
+as.twilio.authToken=04962f81d3fa37fba1730c49ab526ae4
+as.twilio.authServiceSid=VA8ebaa4fc1c2ad7fb3af7f0a081d16c39
+as.twilio.authNumber=+17088326171
 ##########################################################################################
+
+##########################Test Accounts#####################################################
+test-accounts=+917030413171, +918208812667, +918208020569,yash1@yash.com, +919999980854,\
+  \ +919990980854,+919911180854,+918882479992,+919527495098, \
+  +918010672337,+919420070271,+918434521567,+919724773959,+919724773959,+919993113357,+919826269529,+917070810699,\
+  \ +916369605336, +919306517703,+918531803613
+##############################################################################################
