hsaY: Auth Service

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,10 +6,10 @@ server.servlet.context-path=/v1
 ####################################################################################
 
 ######################### TWILIO CONFIG ##################################################
-as.twilio.accountSid=AC0e67255091007e03c8c076fb20c2b013
-as.twilio.authToken=04962f81d3fa37fba1730c49ab526ae4
-as.twilio.authServiceSid=VA8ebaa4fc1c2ad7fb3af7f0a081d16c39
-as.twilio.authNumber=+17088326171
+as.twilio.accountSid=
+as.twilio.authToken=
+as.twilio.authServiceSid=
+as.twilio.authNumber=
 ##########################################################################################
 
 ##########################Test Accounts#####################################################
